new zealand page

--- a/public/about.html
+++ b/public/about.html
@@ -106,7 +106,11 @@
           <!-------------------------- SOUS MENU GLOBAL OFFICES ---------------------------->
           <div class="menuCache_globalOffice">
             <ul>
-              <li><a href="http://">Australia & New Zealand</a></li>
+              <li>
+                <a href="global-offices/australia-new-zealand.html"
+                  >Australia & New Zealand</a
+                >
+              </li>
               <li><a href="http://">Mainland Europe</a></li>
               <li><a href="http://">Japan</a></li>
               <li><a href="http://">Asia</a></li>
@@ -687,7 +691,11 @@
               >
             </div>
             <ul class="footerContaint_Card_link">
-              <li><a href="">Australia & New Zealand</a></li>
+              <li>
+                <a href="global-offices/australia-new-zealand.html"
+                  >Australia & New Zealand</a
+                >
+              </li>
               <li><a href="">Mainland Europe</a></li>
               <li><a href="">Japan</a></li>
               <li><a href="">Singapore</a></li>
