--- a/public/global-offices/australia-new-zealand.html
+++ b/public/global-offices/australia-new-zealand.html
@@ -100,7 +100,7 @@
           <!-------------------------- SOUS MENU GLOBAL OFFICES ---------------------------->
           <div class="menuCache_globalOffice">
             <ul>
-              <li><a href="../global-offices/australia-new-zealand.html">Australia & New Zealand</a></li>
+              <li><a href="http://">Australia & New Zealand</a></li>
               <li><a href="http://">Mainland Europe</a></li>
               <li><a href="http://">Japan</a></li>
               <li><a href="http://">Asia</a></li>
@@ -277,12 +277,12 @@
                   <a href="../mission.html">Mission</a>
                 </li>
                 <li>
-                  <a href="javascript:" class="menuHowCanWeHelp stayActif"
+                  <a href="javascript:" class="menuHowCanWeHelp"
                     >How we can help<i class="fas fa-angle-down"></i
                   ></a>
                 </li>
                 <li>
-                  <a href="javascript:" class="menuProductsServices"
+                  <a href="javascript:" class="menuProductsServices stayActif"
                     >Product & Services<i class="fas fa-angle-down"></i
                   ></a>
                 </li>
@@ -309,11 +309,19 @@
       <div class="menuCache_howCanWeHelp">
         <ul>
           <li>
-            <a href="pharmaceutical.html">Pharmaceutical & Biotech Companies</a>
+            <a href="../how-we-can-help/pharmaceutical.html"
+              >Pharmaceutical & Biotech Companies</a
+            >
           </li>
-          <li><a href="healtcare.html">Healthcare Professionals</a></li>
-          <li><a href="patient_group.html">Patient Groups</a></li>
-          <li><a href="patient.html">Patients</a></li>
+          <li>
+            <a href="../how-we-can-help/healtcare.html"
+              >Healthcare Professionals</a
+            >
+          </li>
+          <li>
+            <a href="../how-we-can-help/patient_group.html">Patient Groups</a>
+          </li>
+          <li><a href="../how-we-can-help/patient.html">Patients</a></li>
         </ul>
       </div>
       <!-------------------------- SOUS MENU PRODUCTS & SERVICES ---------------------------->
@@ -322,44 +330,36 @@
           <div class="menuCache_ProductsServices_Card">
             <ul>
               <li class="mainLi">
-                <a href="../products-services/products.html">Products</a>
+                <a href="products.html">Products</a>
               </li>
               <li class="secondLi">
-                <a href="../products-services/partnering.html">Partnering</a>
+                <a href="partnering.html">Partnering</a>
               </li>
               <li class="secondLi">
-                <a href="../products-services/divestment.html">Divestment</a>
+                <a href="divestment.html">Divestment</a>
               </li>
               <li class="secondLi">
-                <a href="../products-services/markets.html"
-                  >Unlicensed Markets</a
-                >
+                <a href="markets.html">Unlicensed Markets</a>
               </li>
               <li class="secondLi"><a href="http://">Our Products</a></li>
             </ul>
           </div>
           <div class="menuCache_ProductsServices_Card">
             <ul>
-              <li class="mainLi">
-                <a href="../products-services/services.html">Services</a>
-              </li>
+              <li class="mainLi"><a href="services.html">Services</a></li>
               <li class="secondLi">
-                <a href="../products-services/managed-access-programs.html"
+                <a href="managed-access-programs.html"
                   >Managed Access Programs</a
                 >
               </li>
               <li class="secondLi">
-                <a href="../products-services/clinical.html"
-                  >Clinical Supplies Management</a
-                >
+                <a href="clinical.html">Clinical Supplies Management</a>
               </li>
               <li class="secondLi">
-                <a href="../products-services/real-world.html"
-                  >Real World Data</a
-                >
+                <a href="real-world.html">Real World Data</a>
               </li>
               <li class="secondLi">
-                <a href="../products-services/medical-science.html"
+                <a href="medical-science.html"
                   >Medical Science Liaison (MSLs)</a
                 >
               </li>
@@ -376,11 +376,7 @@
             <p>Online services for healthcare professionals</p>
             <ul>
               <li><a href="">Hard to find medicines (Clinigen Direct)</a></li>
-              <li>
-                <a href="../products-services/managed-access-programs.html"
-                  >Managed Access Programs (Cliniport)</a
-                >
-              </li>
+              <li><a href="">Managed Access Programs (Cliniport)</a></li>
               <li><a href="">Clinigen Products</a></li>
               <li><a href="">Special Obtains</a></li>
               <li><a href="">Aseptics UK</a></li>
@@ -415,13 +411,23 @@
                     ><a href="javascript:" class="menuBack">How we can help</a>
                   </li>
                   <li>
-                    <a href="pharmaceutical.html"
+                    <a href="../how-we-can-help/pharmaceutical.html"
                       >Pharmaceutical & Biotech Companies</a
                     >
                   </li>
-                  <li><a href="healtcare.html">Healtcare Professionals</a></li>
-                  <li><a href="patient_group.html">Patient Groups</a></li>
-                  <li><a href="patient.html">Patients</a></li>
+                  <li>
+                    <a href="../how-we-can-help/healtcare.html"
+                      >Healtcare Professionals</a
+                    >
+                  </li>
+                  <li>
+                    <a href="../how-we-can-help/patient_group.html"
+                      >Patient Groups</a
+                    >
+                  </li>
+                  <li>
+                    <a href="../how-we-can-help/patient.html">Patients</a>
+                  </li>
                 </ul>
               </div>
             </li>
@@ -456,84 +462,139 @@
     </header>
     <!-------------------------- CONTENU ---------------------------->
     <main>
-      <div class="mainHeaderPatientGroup">
-        <div class="mainHeaderPatientGroup_contain">
-          <span>HOW WE CAN HELP</span>
-          <h3>PATIENT GROUPS</h3>
+      <div class="mainHeaderProducts">
+        <div class="mainHeaderProducts_contain">
+          <span>GLOBAL OFFICES</span>
+          <h3 style="width: 900px">AUSTRALIA & NEW ZEALAND</h3>
         </div>
       </div>
       <!----------------------------------------------- MENU FIXED ----------------------------------->
-      <div class="menuFixedPatientGroup">
+      <div class="menuFixed_about">
         <ul>
-          <li><a href="javascript:">Introduction</a></li>
-          <li><a href="javascript:">Key facts</a></li>
-          <li><a href="javascript:">How we can help</a></li>
+          <li><a href="javascript:">Locations</a></li>
+          <li><a href="javascript:">About Link Healtcare Austrasia</a></li>
+          <li><a href="javascript:">History</a></li>
         </ul>
       </div>
       <!------------------------------------------------------------------ CONTENU ------------------------------------------------------------------>
-      <div class="containerPatientGroup">
+      <div class="containerProducts">
         <div class="contain_L">
           <div class="contain_L_1">
-            <h3>INTRODUCTION</h3>
+            <h3>LOCATIONS</h3>
+            <div class="listLocations">
+              <div class="locations">
+                <h5>Link Healtcare | Australia</h5>
+                <p>
+                  5 Apollo Street <br />Warriewood <br />NSW 2102
+                  <br />Australia
+                </p>
+              </div>
+              <div class="locations">
+                <h5>Link Healtcare | New Zealand</h5>
+                <p>
+                  Suite 32, Level 26, <br />PwC Tower, <br />188 Quay Street,
+                  <br />Auckland
+                </p>
+              </div>
+            </div>
+            <h3>ABOUT LINK HEALTHCARE</h3>
+            <h3>AUSTRALIA</h3>
             <h4>
-              At Clinigen, we are committed to getting the right medicine to the
-              right patient at the right time. It is therefore natural that part
-              of our work focuses on engagement with patient advocacy groups,
-              listening to their needs, learning from them, and engaging to
-              educate and empower on the topic of access to medicines,
-              specifically those that are hard to obtain, but which address an
-              unmet medical need.
+              For over 20 years Link Healthcare Australasia has been the trusted
+              leader in providing ethical, compliant access to both unregistered
+              and registered specialty medicines to assist patients with unmet
+              clinical needs.
             </h4>
             <p>
-              This can be an area that is not given much focus, or has low
-              awareness amongst the many priorities of a busy advocacy
-              organisation, but nonetheless it is an important part of the
-              armoury required to face the access challenges that exist in
-              today’s healthcare systems.
+              Link Healthcare now has a team of over 50 employees working across
+              Australia and New Zealand.
+            </p>
+            <p>
+              We support hospitals, healthcare professionals and pharmaceutical
+              industry partners to provide access to specialist medicines and
+              medicines that are unregistered or commercially unavailable. We
+              have strong partnerships with biotechnology companies,
+              pharmaceutical manufacturers and suppliers across the globe. Our
+              partner agreements are reviewed regularly to allow the supply of
+              products into new geographic regions, reflecting our commitment to
+              providing a global network of products and services.
+            </p>
+            <p>
+              The medicines we provide include both specialist registered
+              pharmaceutical products and those supplied through the
+              unregistered route:
+            </p>
+            <p>
+              <strong>Specialist products;</strong> a range of essential
+              registered medicines in diverse therapeutic areas including
+              oncology, haematology, emergency medicine, analgesia/anaesthesia,
+              dermatology, endocrinology, infectious diseases, intensive care,
+              rheumatology, neurology, palliative care, psychiatry, urology and
+              transplantation.
+            </p>
+            <p>
+              <strong>Unregistered medicines;</strong> facilitating ethical,
+              compliant access to unregistered or commercially unavailable
+              medicines. We meet the demands of healthcare professionals around
+              the world treating patients with unmet needs who may be seeking
+              medicines that are:
+            </p>
+            <ul>
+              <li>In a clinical trial</li>
+              <li>Not commercially available, globally or in Australasia</li>
+              <li>Unvalaible due to medicine shortages</li>
+              <li>Discontinued from the market</li>
+            </ul>
+            <h3>HISTORY</h3>
+            <h4>
+              Link Healthcare was established in 1997 as a small family-owned
+              business. The company’s founder identified an unmet need to supply
+              low volume, highly specialised and clinically important
+              pharmaceuticals in the Australian market.
+            </h4>
+            <p>
+              In 2001 the business expanded to New Zealand, as Link
+              Pharmaceuticals.
+            </p>
+            <p>
+              Through the next ten years Link Healthcare grew significantly
+              through the in-license and acquisition of a diverse portfolio of
+              mature products from several multinational organisations and
+              through the licensing of novel specialist pharmaceuticals for the
+              Australasian region.
+            </p>
+            <p>
+              Link Healthcare conducted a merger with South Africa’s Equity
+              Pharmaceutical group over 2010-2013, thereby creating a business
+              exceeding $70m and immediately capitalising on the relative
+              synergies in both organisations.
+            </p>
+            <p>
+              In 2011 Link Healthcare increased its geographical expansion into
+              Asia with offices in both Japan and Singapore. Two years later
+              Link Healthcare Hong Kong was established.
+            </p>
+            <p>
+              Link Healthcare became part of the Clinigen Group in 2015,
+              significantly strengthening the Group’s global presence and
+              position in the AAA (Australasia, Asia and Africa) region.
             </p>
           </div>
-          <div class="contain_L_2">
-            <h3>KEY FACTS</h3>
-            <p>
-              Clinigen proudly supports a number of patient groups and
-              associations. See below for a list of organisations that we
-              currently support:
-            </p>
-            <a href="#">EURORDIS</a>
-            <br />
-            <a href="#">Cancer52</a>
-          </div>
-          <div class="contain_L_3">
-            <h3>HOW WE CAN HELP</h3>
-
-            <p>
-              Every year, thousands of patients and care givers across the globe
-              face the dire situation of discovering that the medicine they need
-              is unavailable to them. It could be that it is still in
-              development, a discontinued line, or simply unavailable in the
-              country they reside in.
-            </p>
-            <p>
-              In these difficult times, patient advocacy groups can play a
-              critical role as a trusted resource for their patients, providing
-              timely and accurate information about the process for accessing
-              unlicensed medicines, and explaining the roles of all the
-              different stakeholders involved.
-            </p>
-            <p>
-              If you are a patient group representative and would like to
-              understand more about ethical, compliant routes that a physician
-              can utilise to access an unlicensed medicine on behalf of his/her
-              patient, and explore what your role in that might be, please get
-              in touch with us on patientadvocacy@clinigengroup.com. We would
-              love to hear from you!
-            </p>
-          </div>
-          <div class="relatedLinksPatientGroup">
+          <div class="relatedLinksProducts">
             <h4>RELATED LINKS</h4>
             <ul>
-              <li><a href="../about.html">About Clinigen</a></li>
-              <li><a href="../mission.html">Mission</a></li>
+              <li><a href="../public/mission.html">Mission</a></li>
+              <li>
+                <a href="../public/how-we-can-help/pharmaceutical.html"
+                  >Pharmaceutical & Biotech Companies</a
+                >
+              </li>
+              <li>
+                <a href="../public/how-we-can-help/healtcare.html"
+                  >Healtcare pProfessionals</a
+                >
+              </li>
+              <li><a href="#">Careers</a></li>
             </ul>
           </div>
         </div>
@@ -658,6 +719,30 @@
               />
             </form>
           </div>
+          <div class="mapContainer">
+            <div class="titleMap">
+              <img src="../images/earth.JPG" alt="" />
+              <h5>Map</h5>
+            </div>
+            <div id="map">
+              <script
+                src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXqtMpNLBq94CivQpi_KlPxNoOjDsEX7Q&callback=initMap&libraries=&v=weekly"
+                async
+              ></script>
+            </div>
+          </div>
+          <div class="socialMedia">
+            <div class="socialMedia_title">
+              <img src="../images/earth.JPG" alt="" />
+              <h5>Social media</h5>
+            </div>
+            <div class="socialMedia_links">
+              <ul>
+                <li><a href="http://">@Clinigen</a></li>
+                <li><a href="http://">Linkedin</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </main>
@@ -672,11 +757,7 @@
               >
             </div>
             <ul class="footerContaint_Card_link">
-              <li>
-                <a href="../global-offices/australia-new-zealand.html"
-                  >Australia & New Zealand</a
-                >
-              </li>
+              <li><a href="">Australia & New Zealand</a></li>
               <li><a href="">Mainland Europe</a></li>
               <li><a href="">Japan</a></li>
               <li><a href="">Singapore</a></li>
@@ -713,11 +794,7 @@
             <p>Online services for healthcare professionals</p>
             <ul>
               <li><a href="">Hard to find medicines (Clinigen Direct)</a></li>
-              <li>
-                <a href="../products-services/managed-access-programs.html"
-                  >Managed Access Programs (Cliniport)</a
-                >
-              </li>
+              <li><a href="">Managed Access Programs (Cliniport)</a></li>
               <li><a href="">Clinigen Products</a></li>
               <li><a href="">Special Obtains</a></li>
               <li><a href="">Aseptics UK</a></li>
@@ -748,8 +825,9 @@
     <script src="../src/js/header.js"></script>
     <script src="../src/js/hamburger.js"></script>
     <script src="../src/js/input.js"></script>
-    <script src="../src/js/patient_group.js"></script>
     <script src="../src/js/form_combo.js"></script>
+    <script src="../src/js/map.js"></script>
+    <script src="../src/js/aboutUs_menuFixe.js"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first 
 <script src="/__/firebase/8.6.1/firebase-app.js"></script>
 
