--- a/public/mission.html
+++ b/public/mission.html
@@ -101,7 +101,7 @@
           <!-------------------------- SOUS MENU GLOBAL OFFICES ---------------------------->
           <div class="menuCache_globalOffice">
             <ul>
-              <li><a href="http://">Australia & New Zealand</a></li>
+              <li><a href="global-offices/australia-new-zealand.html">Australia & New Zealand</a></li>
               <li><a href="http://">Mainland Europe</a></li>
               <li><a href="http://">Japan</a></li>
               <li><a href="http://">Asia</a></li>
@@ -659,7 +659,7 @@
               >
             </div>
             <ul class="footerContaint_Card_link">
-              <li><a href="">Australia & New Zealand</a></li>
+              <li><a href="global-offices/australia-new-zealand.html">Australia & New Zealand</a></li>
               <li><a href="">Mainland Europe</a></li>
               <li><a href="">Japan</a></li>
               <li><a href="">Singapore</a></li>
